# shopper-gaze-monitor-cpp

./: .gitignore  CMakeLists.txt  README.md  diagrams.txt  setup.sh
application/include/: inference.hpp  mqtt.h
application/src/: inference.cpp  main.cpp  mqtt.cpp
resources/: config.json
src/: main.cpp
